tests/hulk/errors/semantic/self_outside_class.hulk
let x = self.val in print(x);
